# opengl-game-in-c

./: .gitmodules  CMakeLists.txt  build.sh  clean.sh  run.sh
.zed/: debug.json  tasks.json
include/: common.h  game.h  quad.h  shader.h
include/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: game.c  glad.c  main.c  quad.c  shader.c
